--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <div class="container">
         <header>
           <nav>
-            <img src="" alt="" srcset="" />
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">Projects</a></li>
@@ -37,40 +36,89 @@
         </header>
         <div class="main">
           <div class="projects">
+            <h1>PROJECTS</h1>
             <div class="row">
               <ul>
-                <li>work1</li>
-                <li>work2</li>
-                <li>work3</li>
+                <li><img src="./images/projects/1.png" alt="" srcset="" /></li>
+                <li><img src="./images/projects/2.png" alt="" srcset="" /></li>
+                <li><img src="./images/projects/3.png" alt="" srcset="" /></li>
               </ul>
             </div>
             <div class="row">
               <ul>
-                <li>work1</li>
-                <li>work2</li>
-                <li>work3</li>
+                <li><img src="./images/projects/4.jpeg" alt="" srcset="" /></li>
+                <li><img src="./images/projects/5.png" alt="" srcset="" /></li>
+                <li><img src="./images/projects/6.png" alt="" srcset="" /></li>
               </ul>
             </div>
             <div class="row">
               <ul>
-                <li>work1</li>
-                <li>work2</li>
-                <li>work3</li>
+                <li><img src="./images/projects/7.png" alt="" srcset="" /></li>
+                <li><img src="./images/projects/8.png" alt="" srcset="" /></li>
+                <li><img src="./images/projects/9.jpeg" alt="" srcset="" /></li>
               </ul>
             </div>
           </div>
           <div class="work">
+            <h1>WORK</h1>
             <ul>
-              <li>work</li>
-              <li>work</li>
-              <li>work</li>
-              <li>work</li>
-              <li>work</li>
-              <li>work</li>
+              <li>
+                <p>
+                  <span>1704</span>
+                  Earlier telescopes were consisted of glass lenses mounted in a
+                  tube, such as Galileo used. Newton discovered when light
+                  passed through the lens there were different colors that
+                  refracted different amounts.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span>1664</span>
+                  Newton made his first real contribution by advancing the
+                  binomial thereom, which he included fraction and negative
+                  exponets.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span>1704</span>
+                  Earlier telescopes were consisted of glass lenses mounted in a
+                  tube, such as Galileo used. Newton discovered when light
+                  passed through the lens there were different colors that
+                  refracted different amounts.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span>1704</span>
+                  Earlier telescopes were consisted of glass lenses mounted in a
+                  tube, such as Galileo used. Newton discovered when light
+                  passed through the lens there were different colors that
+                  refracted different amounts.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span>1704</span>
+                  Earlier telescopes were consisted of glass lenses mounted in a
+                  tube, such as Galileo used. Newton discovered when light
+                  passed through the lens there were different colors that
+                  refracted different amounts.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span>1704</span>
+                  Earlier telescopes were consisted of glass lenses mounted in a
+                  tube, such as Galileo used. Newton discovered when light
+                  passed through the lens there were different colors that
+                  refracted different amounts.
+                </p>
+              </li>
             </ul>
           </div>
         </div>
-        <footer></footer>
+        <footer>kontaktai</footer>
       </div>
     </div>
   </body>
