--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
             </div>
             <div class="banner-img">
               <div class="img-crc"></div>
-              <img src="images/newton.jpg" alt="Isaac Newton" />
+              <img
+                class="img-avatar"
+                src="images/newton.jpg"
+                alt="Isaac Newton"
+              />
             </div>
+            <div class="circle-1"></div>
+            <div class="circle-2"></div>
           </div>
         </header>
         <div class="main">
@@ -118,7 +124,9 @@
             </ul>
           </div>
         </div>
-        <footer>kontaktai</footer>
+        <footer>
+          <p>© 1684 Intense. All rights reserved.</p>
+        </footer>
       </div>
     </div>
   </body>
