--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
             </ul>
           </nav>
           <div class="banner">
-            <div class="text">
-              <h1>Isaac Newton</h1>
-              <q
-                >If I have seen further it is by standing on the shoulders of
-                Giants.</q
-              >
-            </div>
-            <div class="banner-img">
-              <div class="img-crc"></div>
-              <img
-                class="img-avatar"
-                src="images/newton.jpg"
-                alt="Isaac Newton"
-              />
-            </div>
-            <div class="circle-1"></div>
-            <div class="circle-2"></div>
+            <div class="moving-area">
+<!--               <div class="text">
+                <h1>Isaac Newton</h1>
+                <q
+                  >If I have seen further it is by standing on the shoulders of
+                  Giants.</q
+                >
+              </div>
+              <div class="banner-img">
+                <div class="img-crc"></div>
+                <img
+                  class="img-avatar"
+                  src="images/newton.jpg"
+                  alt="Isaac Newton"
+                />
+              </div>
+            </div> -->
           </div>
         </header>
         <div class="main">
