--- a/index.html
+++ b/index.html
@@ -43,25 +43,88 @@
         <div class="main">
           <div class="projects">
             <h1>PROJECTS</h1>
-            <div class="row">
+            <div class="row projects-ul-hidden">
               <ul>
-                <li><img src="./images/projects/1.png" alt="" srcset="" /></li>
-                <li><img src="./images/projects/2.png" alt="" srcset="" /></li>
-                <li><img src="./images/projects/3.png" alt="" srcset="" /></li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/1.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/2.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/3.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
               </ul>
             </div>
-            <div class="row">
+            <div class="row projects-ul-hidden">
               <ul>
-                <li><img src="./images/projects/4.jpeg" alt="" srcset="" /></li>
-                <li><img src="./images/projects/5.png" alt="" srcset="" /></li>
-                <li><img src="./images/projects/6.png" alt="" srcset="" /></li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/4.jpeg"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/5.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/6.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
               </ul>
             </div>
-            <div class="row">
+            <div class="row projects-ul-hidden">
               <ul>
-                <li><img src="./images/projects/7.png" alt="" srcset="" /></li>
-                <li><img src="./images/projects/8.png" alt="" srcset="" /></li>
-                <li><img src="./images/projects/9.jpeg" alt="" srcset="" /></li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/7.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/8.png"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
+                <li>
+                  <img
+                    class="project-img project-img-out-sh"
+                    src="./images/projects/9.jpeg"
+                    alt=""
+                    srcset=""
+                  />
+                </li>
               </ul>
             </div>
           </div>
