--- a/index.html
+++ b/index.html
@@ -130,54 +130,54 @@
           </div>
           <div class="work">
             <h1>WORK</h1>
-            <ul>
-              <li>
-                <p>
-                  <span>1704</span>
+            <ul class="work-list">
+              <li class="work-info">
+                <p class="work-info-text">
+                  <span class="work-year">1704</span>
                   Earlier telescopes were consisted of glass lenses mounted in a
                   tube, such as Galileo used. Newton discovered when light
                   passed through the lens there were different colors that
                   refracted different amounts.
                 </p>
               </li>
-              <li>
-                <p>
-                  <span>1664</span>
+              <li class="work-info">
+                <p class="work-info-text">
+                  <span class="work-year">1664</span>
                   Newton made his first real contribution by advancing the
                   binomial thereom, which he included fraction and negative
                   exponets.
                 </p>
               </li>
-              <li>
-                <p>
-                  <span>1704</span>
+              <li class="work-info">
+                <p class="work-info-text">
+                  <span class="work-year">1755</span>
                   Earlier telescopes were consisted of glass lenses mounted in a
                   tube, such as Galileo used. Newton discovered when light
                   passed through the lens there were different colors that
                   refracted different amounts.
                 </p>
               </li>
-              <li>
-                <p>
-                  <span>1704</span>
+              <li class="work-info">
+                <p class="work-info-text">
+                  <span class="work-year">1777</span>
                   Earlier telescopes were consisted of glass lenses mounted in a
                   tube, such as Galileo used. Newton discovered when light
                   passed through the lens there were different colors that
                   refracted different amounts.
                 </p>
               </li>
-              <li>
-                <p>
-                  <span>1704</span>
+              <li class="work-info">
+                <p class="work-info-text">
+                  <span class="work-year">1788</span>
                   Earlier telescopes were consisted of glass lenses mounted in a
                   tube, such as Galileo used. Newton discovered when light
                   passed through the lens there were different colors that
                   refracted different amounts.
                 </p>
               </li>
-              <li>
-                <p>
-                  <span>1704</span>
+              <li class="work-info">
+                <p class="work-info-text">
+                  <span class="work-year">1733</span>
                   Earlier telescopes were consisted of glass lenses mounted in a
                   tube, such as Galileo used. Newton discovered when light
                   passed through the lens there were different colors that
@@ -187,9 +187,13 @@
             </ul>
           </div>
         </div>
+
         <footer>
           <p>© 1684 Intense. All rights reserved.</p>
         </footer>
+      </div>
+      <div class="work-box-modal-body work-box-modal-body-hidden">
+        <div class="work-box"></div>
       </div>
     </div>
   </body>
