--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
         </footer>
       </div>
       <div class="work-box-modal-body work-box-modal-body-hidden">
+        <div class="modal-box-close"></div>
         <div class="work-box"></div>
       </div>
     </div>
