--- a/index.html
+++ b/index.html
@@ -193,8 +193,11 @@
         </footer>
       </div>
       <div class="work-box-modal-body work-box-modal-body-hidden">
-        <div class="modal-box-close"></div>
-        <div class="work-box"></div>
+        <div class="work-box">
+          <div class="work-box-close">
+            <button class="work-box-close-btn">x</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
