--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div class="page">
       <div class="container">
-        <header>
-          <nav>
+        <header class="header">
+          <nav class="nav-bar">
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">Projects</a></li>
@@ -195,7 +195,20 @@
       <div class="work-box-modal-body work-box-modal-body-hidden">
         <div class="work-box">
           <div class="work-box-close">
-            <button class="work-box-close-btn">x</button>
+            <button class="work-box-close-btn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="50"
+                height="50"
+                fill="currentColor"
+                class="bi bi-x"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
